<resources>
    <string name="app_name">HW03</string>
    <string name="tv_not_set">Current city not set yet</string>
    <string name="bt_set_city">Set Current city</string>
    <string name="et_city">Enter City Name</string>
    <string name="et_country_hint">Enter Country</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_ok">Ok</string>
    <string name="et_city_main">City Name</string>
    <string name="et_country_main">Country</string>
    <string name="bt_search">Search City</string>
    <string name="tv_no_city">There are no cities to display</string>
    <string name="tv_no_city_2">Search the city from the search box and save.</string>
    <string name="api_key">1BNZGgoTVqQQDUD6n9DN2xLAOAKM1Wt6</string>
    <string name="tv_city_name">Charlotte, US</string>
    <string name="tv_weather_text">Mostly Cloudy</string>
    <string name="iv_weather_icon_desc">Image Description</string>
    <string name="tv_temp">Temperature: 20.1 C</string>
    <string name="tv_time">Updated: 16 minutes ago</string>
    <string name="tv_day">Day</string>
    <string name="tv_night">Night</string>
    <string name="tv_day_weather" />
    <string name="tv_night_weather" />
    <string name="tv_more_details">Click here for more details</string>
    <string name="bt_save">Save City</string>
    <string name="bt_set_current">Set as current</string>
    <string name="iv_star">Star</string>
    <string name="tv_condition">Condition</string>
</resources>
